--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Document</title>
   </head>
   <body>
-    <table class="table">
+    <table class="table" style="width: 1300px">
       <thead>
         <tr>
           <th>Markasi</th>
